--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hyperterm-dracula",
-  "version": "0.1.0",
+  "name": "hyperterm-dark-dracula",
+  "version": "0.1.1",
   "description": "Dark dracule HyperTerm theme",
   "license": "MIT",
   "repository": "dangvanthanh/hyperterm-dark-dracula",
