Renames repo owner

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.6",
   "description": "A dark theme for Hyper",
   "license": "MIT",
-  "repository": "dangvanthanh/hyper-dracula",
+  "repository": "dracula/hyper-dracula",
   "author": {
     "name": "Dang Van Thanh",
     "email": "dangvanthanh@dangthanh.org",
