--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
   "name": "hyper-dracula",
-  "version": "0.1.8",
+  "version": "0.1.9",
+  "main": "index.js",
+  "homepage": "https://draculatheme.com/hyper",
   "description": "A dark theme for Hyper",
-  "license": "MIT",
-  "repository": "dracula/hyper",
-  "author": {
-    "name": "Dang Van Thanh",
-    "email": "dangvanthanh@dangthanh.org",
-    "url": "http://dangthanh.org"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dracula/hyper.git"
   },
-  "files": [
-    "index.js"
-  ],
   "keywords": [
-    "dracula-theme",
+    "hyperterm",
     "hyper",
-    "hyper-theme",
-    "hyper-dracula"
-  ]
+    "hyper.app",
+    "hyper dracula",
+    "hyper theme",
+    "dracula-theme"
+  ],
+  "author": "Dang Van Thanh <dangvanthanh@dangthanh.or>",
+  "license": "MIT"
 }
