--- a/package.json
+++ b/package.json
@@ -19,14 +19,16 @@
 	"author": "Dang Van Thanh <dangvanthanh@dangthanh.org>",
 	"license": "MIT",
 	"devDependencies": {
-		"@biomejs/biome": "1.4.1",
-		"husky": "^8.0.3",
-		"lint-staged": "^15.2.0"
+		"@biomejs/biome": "1.6.4",
+		"husky": "^9.0.11",
+		"lint-staged": "^15.2.2"
 	},
 	"scripts": {
-		"prepare": "husky install"
+		"lint": "bunx @biomejs/biome check ./index.js --apply",
+		"format": "bunx @biomejs/biome format ./index.js --write",
+		"prepare": "husky"
 	},
 	"lint-staged": {
-		"**/*": "pnpm dlx @biomejs/biome format ./index.js --write"
+		"*.{js,ts}": ["bun run lint", "bun run format"]
 	}
 }
