--- a/package.json
+++ b/package.json
@@ -1,34 +1,37 @@
 {
-	"name": "hyper-dracula",
-	"version": "0.2.2",
-	"main": "index.js",
-	"homepage": "https://draculatheme.com/hyper",
-	"description": "A dark theme for Hyper",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/dracula/hyper.git"
-	},
-	"keywords": [
-		"hyperterm",
-		"hyper",
-		"hyper.app",
-		"hyper dracula",
-		"hyper theme",
-		"dracula-theme"
-	],
-	"author": "Dang Van Thanh <dangvanthanh@dangthanh.org>",
-	"license": "MIT",
-	"devDependencies": {
-		"@biomejs/biome": "1.9.4",
-		"husky": "^9.1.7",
-		"lint-staged": "^16.1.1"
-	},
-	"scripts": {
-		"lint": "bunx @biomejs/biome check ./index.js --write",
-		"format": "bunx @biomejs/biome format ./index.js --write",
-		"prepare": "husky"
-	},
-	"lint-staged": {
-		"*.{js,ts}": ["bun run lint", "bun run format"]
-	}
+  "name": "hyper-dracula",
+  "version": "0.2.2",
+  "main": "index.js",
+  "homepage": "https://draculatheme.com/hyper",
+  "description": "A dark theme for Hyper",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dracula/hyper.git"
+  },
+  "keywords": [
+    "hyperterm",
+    "hyper",
+    "hyper.app",
+    "hyper dracula",
+    "hyper theme",
+    "dracula-theme"
+  ],
+  "author": "Dang Van Thanh <dangvanthanh@dangthanh.org>",
+  "license": "MIT",
+  "devDependencies": {
+    "@biomejs/biome": "2.3.2",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.6"
+  },
+  "scripts": {
+    "lint": "biome lint ./index.js",
+    "format": "biome format ./index.js --write",
+    "prepare": "husky"
+  },
+  "lint-staged": {
+    "*.{js,ts}": [
+      "bun run lint",
+      "bun run format"
+    ]
+  }
 }
